--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
     <h1>Team member roles</h1>
     <!-- add image here  <img src="https://gitlab.com/twn-devops-bootcamp/latest/03-git/git-exercises.git" width="" /> -->
     <ul>
-        <li>Sarah - Full stack devlopper</li>
+        <li>Sarah - Full stack developer</li>
         <li>Bobby - React developer</li>
         <li>Ari - Java developer</li>
         <li>Andrea - DevOps engineer</li>
