--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Team member roles</h1>
-    <!-- add image here  <img src="https://www.careeraddict.com/uploads/article/58721/illustration-group-people-team-meeting.jpg" width="" /> -->
+    <!-- add image here  <img src="https://gitlab.com/twn-devops-bootcamp/latest/03-git/git-exercises.git" width="" /> -->
     <ul>
         <li>Sarah - Full stack devlopper</li>
         <li>Bobby - React developer</li>
